@@ -49,13 +49,17 @@ option(GUROBI "should gurobi solver be linked" OFF)
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
-find_package(Boost ${BOOST_MIN_VERSION} OPTIONAL_COMPONENTS program_options)
+find_package(Boost ${BOOST_MIN_VERSION} OPTIONAL_COMPONENTS program_options serialization)
 
 if(Boost_PROGRAM_OPTIONS_FOUND)
    set(PAPILO_COMMAND_LINE_AVAILABLE 1)
 else()
    message("WARNING: Boost program_options not found-> PaPILO can only used as library!")
    set(PAPILO_COMMAND_LINE_AVAILABLE 0)
+endif()
+
+if(Boost_SERIALIZATION_FOUND)
+   set(PAPILO_SERIALIZATION_AVAILABLE 1)
 endif()
 
 if(GMP)
